--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <h3>About me</h3>
 
-    <p>Hey, thanks for checking out my page. I'm Feliphe Gonçalves Galiza, a Control Engineer. 
+    <p>Hey, thanks for checking out my page. I'm Feliphe Goncalves Galiza, a Control Engineer. 
 		</p>
 		
 		 <p>Undercontruction</p>
