--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,10 @@
             </div>
         </div>
 
-        <div class="add" id="contact">
-            <a href="mailto:feliphe.ggaliza@gmail.com">feliphe.ggaliza@gmail.com</a> <i class="fa fa-envelope"></i><br/>
-            Sao Paulo, Brazil <i class="fa fa-map-marker"></i>
+         <div class="add" id="contact">
+		    <a href="mailto:feliphe.ggaliza@gmail">feliphe.ggaliza@gmail</a> <i class="fa fa-envelope fa-fw"  aria-hidden="true"></i><br/>
+			<a href="https://www.linkedin.com/in/feliphegoncalves">feliphegoncalves</a> <i class="fa fa-linkedin-square"  aria-hidden="true"></i><br/>
+            S&atildeo Paulo, Brazil <i class="fa fa-map-marker"  aria-hidden="true"></i>
         </div>
 
         <div class="clear"></div>			
