--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href='http://fonts.googleapis.com/css?family=Signika+Negative:300,600' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css' />
       <!--  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
-	
+	<link href="./font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet"> 
 	<title>Feliphe Gon&ccedilalves Galiza</title>
 		
 </head>
