--- a/projects.html
+++ b/projects.html
@@ -9,9 +9,9 @@
     <!-- fonts -->
     <link href='http://fonts.googleapis.com/css?family=Signika+Negative:300,600' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:700' rel='stylesheet' type='text/css' />
-  <!--  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.css" rel="stylesheet">
-
+     <!--  <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
+	<link href="./font-awesome-4.7.0/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet"> 
+	
 	<title>Feliphe Gon&ccedilalves Galiza</title>	
 	
 </head>
@@ -75,13 +75,10 @@
  </div>
 
     
-
-
-    
 </div>
 <div id="footer">
     <p>Content &copy 2016 by <a href="https://github.com/felipheggaliza/felipheggaliza.github.io">Feliphe Gon&ccedilalves Galiza.</a><br>
-	Template design by <a href="https://github.com/cfenollosa/bashblog">Carlos Fenollosa</a></p>
+	Template design forked from <a href="https://github.com/cfenollosa/bashblog">Carlos Fenollosa</a></p>
 	</p>
 </div>
 
