--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class="nomargin name">Feliphe Gon&ccedilalves Galiza</h1>
 
             <div class="description">
-                <div class="position">Automation & Control Engineer</div>
+                <div class="position">Automation & Control Engineer <br> Artificial Intelligence Software Developer</div>
             </div>
         </div>
 
